backend/TempExecution/45a589be326d49919b17b1cd1832ade3_output.txt
45a589be326d49919b17b1cd1832ade3.c:5:1: error: unknown type name 'using'
    5 | int main() {
      | ^~~~~
45a589be326d49919b17b1cd1832ade3.c:5:17: error: expected '=', ',', ';', 'asm' or '__attribute__' before 'std'
    5 | int main() {
      |                 ^  
45a589be326d49919b17b1cd1832ade3.c: In function 'main':
45a589be326d49919b17b1cd1832ade3.c:15:5: error: 'cin' undeclared (first use in this function)
45a589be326d49919b17b1cd1832ade3.c:15:5: note: each undeclared identifier is reported only once for each function it appears in
45a589be326d49919b17b1cd1832ade3.c:17:5: error: 'cout' undeclared (first use in this function)
45a589be326d49919b17b1cd1832ade3.c:19:5: error: 'vector' undeclared (first use in this function)
45a589be326d49919b17b1cd1832ade3.c:19:12: error: expected expression before 'int'
45a589be326d49919b17b1cd1832ade3.c:21:5: error: 'v' undeclared (first use in this function)
45a589be326d49919b17b1cd1832ade3.c:23:11: error: 'true' undeclared (first use in this function)
45a589be326d49919b17b1cd1832ade3.c:2:1: note: 'true' is defined in header '<stdbool.h>'; this is probably fixable by adding '#include <stdbool.h>'
    1 | #include<stdio.h>
  +++ |+#include <stdbool.h>
    2 | 
